--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 .idea
-main
-docs/node_modules
-docs/build
-docs/.docusaurus
-docs/.cache-loader
-docs/.DS_Store
-docs/.env.local
-docs/.env.development.local
-docs/.env.test.local
-docs/.env.production.local
-docs/npm-debug.log*
-docs/yarn-debug.log*
-docs/yarn-error.log*
+node_modules
+build
+.docusaurus
+.cache-loader
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
