--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,19 +1,26 @@
-name: Go
+name: Tests
 
 on:
   pull_request:
     branches: [ main ]
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-
-    - name: Set up Go
-      uses: actions/setup-go@v2
+    - uses: actions/setup-go@v2
       with:
         go-version: 1.17
 
-    - name: Test
+    - name: gofmt
+      uses: Jerome1337/gofmt-action@v1.0.4
+      with:
+        gofmt-path: './src'
+        gofmt-flags: '-l -d -s -e'
+
+    - name: go vet
+      run: go vet ./...
+
+    - name: go test
       run: go test -v ./...
