--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,4 +25,10 @@ jobs:
       run: go vet ./...
 
     - name: go test
-      run: go test -v ./...
+      run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+
+    - uses: codecov/codecov-action@v2
+      with:
+        files: ./coverage.txt
+        fail_ci_if_error: true
+        verbose: true
