--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,9 +1,7 @@
-name: Tests
+name: CI
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ main ]
 
 jobs:
@@ -16,9 +14,6 @@ jobs:
     - uses: actions/setup-go@v2
       with:
         go-version: 1.17
-
-    - name: Check LibraryModuleVersion variable value
-      run: .github/checkVersionVar.sh
 
     - name: gofmt
       uses: Jerome1337/gofmt-action@v1.0.4
@@ -38,3 +33,20 @@ jobs:
         files: ./coverage.txt
         fail_ci_if_error: true
         verbose: true
+
+    - name: Read new version
+      id: read_code_step
+      run: echo "::set-output name=code_version::$(.github/getCodeVersion.sh)"
+
+    - name: Create new version Tag
+      uses: actions/github-script@v5
+      env:
+        TAG_NAME: ${{steps.read_code_step.outputs.code_version}}
+      with:
+        script: |
+          github.rest.git.createRef({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            ref: `refs/tags/v${process.env.TAG_NAME}`,
+            sha: context.sha
+        })
