--- a/.github/workflows/ci_pullreq.yml
+++ b/.github/workflows/ci_pullreq.yml
@@ -11,9 +11,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v4
         with:
-          go-version: 1.20
+          go-version: '1.20.7'
 
       - name: Check LibraryModuleVersion variable value
         run: .github/checkVersionVar.sh
